--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -19,6 +19,6 @@ nav span {
   font-size: 48px;
 }
 
-.new-tweet {
+.new-tweet-header {
   text-align: center;
 }
