--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,4 @@
-
-.container {
-  display: flex;
-  height: 120px;
-  width: 100vw;
+.new-tweet {
   margin-top: 50px;
 }
 
@@ -10,11 +6,13 @@ textarea {
   width: 100%;
   background: transparent;
   color: #000000;
+  font-weight:bold;
   outline: none;
   border-top: 0px;
   border-left: 0px;
   border-right: 0px;
   border-bottom: 4px solid black;
+  margin-bottom: 10px;
 }
 
 .new-tweet-footer {
@@ -25,6 +23,12 @@ textarea {
 
 button {
   background-color: #4056A1;
+  font-size: 22px;
   font-family: 'Bungee', sans-serif;
   color: #FFFFFF;
+}
+
+.counter {
+  font-weight: bold;
+  font-family: 'Bungee', sans-serif;
 }
